--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -12,13 +12,15 @@
 
     = stylesheet_link_tag "screen"
     <script src="http://code.jquery.com/jquery-1.9.0.js"></script>
+    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     = javascript_include_tag  "all", "dev"
 
   %body
+    = javascript_include_tag  "d3dev"
     /[if lt IE 7] <p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p>
     .container
       .masthead
-        %h3.muted Project name
+        %h3.muted D3 Generator
         .navbar
           .navbar-inner
             .container
