--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,14 +1,49 @@
 ---
 title: prototype
 ---
+
+.row-fluid
+  .span12
+    %button.btn.btn-info.btn-lg.btn-block Select Your hope
 .jumbotron
   %h1 Marketing stuff!
   %p.lead Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
   %a.btn.btn-large.btn-success{:href=>"#"} Get started today
 %hr
 
+:css
+    .bar {
+        fill: steelblue;
+    }
+ 
+    .bar:hover {
+        fill: brown;
+    }
+ 
+    .axis {
+        font: 10px sans-serif;
+    }
+ 
+    .axis path,
+    .axis line {
+        fill: none;
+        stroke: #000;
+        shape-rendering: crispEdges;
+    }
+ 
+    .x.axis path {
+        display: none;
+    }
 
 .row-fluid
+  .span12
+    %button.btn.btn-info.btn-lg.btn-block Select Your hope
+
+.row-fluid
+  .span12
+    .svg test
+    
+    .row-fluid
   .span4
     %h2 Heading
     %p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
