--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -4,12 +4,12 @@ title: prototype
 
 .row-fluid
   .span12
+    %h1.text-center D3 Generator
+.row-fluid
+  .span12
     %button.btn.btn-info.btn-lg.btn-block Select Your hope
-.jumbotron
-  %h1 Marketing stuff!
-  %p.lead Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-  %a.btn.btn-large.btn-success{:href=>"#"} Get started today
-%hr
+.row-fluid
+  .span12.graph
 
 :css
     .bar {
@@ -34,30 +34,3 @@ title: prototype
     .x.axis path {
         display: none;
     }
-
-.row-fluid
-  .span12
-    %button.btn.btn-info.btn-lg.btn-block Select Your hope
-
-.row-fluid
-  .span12
-    .svg test
-    
-    .row-fluid
-  .span4
-    %h2 Heading
-    %p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-    %p
-      %a.btn{:href=>"#"}View details &raquo;
-  .span4
-    %h2 Heading
-    %p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-    %p
-      %a.btn{:href=>"#"}View details &raquo;
-  .span4
-    %h2 Heading
-    %p Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.
-    %p
-      %a.btn{:href=>"#"}View details &raquo;
-
-%hr
