--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -21,7 +21,7 @@
       .masthead
       = yield
 
-      .footer &copy; Company 2013
+      .footer.my-sign.text-center Kazufumi Takashina
 
     = javascript_include_tag "//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"
     :javascript
