add pry-byebug and delete part of title

--- a/source/stylesheets/dev.css.scss
+++ b/source/stylesheets/dev.css.scss
@@ -8,6 +8,12 @@ h1 {
   color: #666;
 }
 
+button {
+  font-family: 'Poiret One',cursive,serif;
+  font-size:50px;
+  color: #666;
+}
+
 .my-sign {
   font-family: 'Poiret One',cursive,serif;
   font-size: 12px;
