--- a/source/stylesheets/dev.css.scss
+++ b/source/stylesheets/dev.css.scss
@@ -51,3 +51,54 @@ button {
 .x.axis path {
     display: none;
 }
+
+/*
+ for source viewer
+*/
+.tabs {
+  zoom: 1;
+  background: #c9c3c4;
+  border-bottom: 3px solid #c81528;
+  list-style: none;
+  margin: 0 auto;
+  padding: 0;
+}
+.tabs:after {
+  content:"."; 
+  display: block;
+  height:0px;
+  clear:both;
+  line-height:0;
+  visibility:hidden;
+}
+.tabs li {
+  float:left;
+  text-align: center;
+  &:last-child {
+    background:none;
+  }
+  a {
+    display: block;
+    width: 138px;
+    padding: 8px 0;
+    text-decoration: none;
+    color: #222;
+  }
+  a:hover {
+    background:#c95560;
+    color:#fff;
+  }
+  &.active,
+  &.active a,
+  &.active a:hover {
+    background:#c81528;
+    color: #fff;
+  }
+}
+
+.panels > .panel {
+  display: none;
+}
+.panels > .panel.active {
+  display: block;
+}
