change source viewer behavior to use fadeIn

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -18,7 +18,7 @@
 .row
   .span12.source
     .panels
-      #cont1.panel.active
+      #cont1.panel
         コンテンツ1
       #cont2.panel
         コンテンツ2
