--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -10,11 +10,11 @@
   .span12.source-tab
     %ul.tabs
       %li#tab1.tab.active<
-        %a{:href => "#cont1"} タブ1
+        %a{:href => "#cont1"} javascript
       %li#tab2.tab<
-        %a{:href => "#cont2"} タブ2
+        %a{:href => "#cont2"} HTML
       %li#tab3.tab<
-        %a{:href => "#cont3"} タブ3
+        %a{:href => "#cont3"} CSS
 .row
   .span12.source
     .panels
