show d3dev.js file in HTML

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -18,12 +18,13 @@
 .row
   .span12.source
     .panels
-      #cont1.panel
-        コンテンツ1
-      #cont2.panel
-        コンテンツ2
-        %br コンテンツ2
-      #cont3.panel
-        コンテンツ3
-        %br コンテンツ3
-        コンテンツ3
+      %pre
+        #cont1.panel
+          コンテンツ1
+        #cont2.panel
+          コンテンツ2
+          コンテンツ2
+        #cont3.panel
+          コンテンツ3
+          コンテンツ3
+          コンテンツ3
